--- a/template/.babelrc
+++ b/template/.babelrc
@@ -1,8 +1,17 @@
 {
-  "presets": [
-    ["env", { "modules": false }]
-  ],
-  "plugins": [
-    "syntax-dynamic-import"
-  ]
+	"presets": [
+		[
+			"env",
+			{
+				"modules": false,
+				"targets": {
+				  	"browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+				}
+			}
+		],
+		"stage-2"
+	],
+	"plugins": [
+		"syntax-dynamic-import"
+	]
 }
