--- a/template/package.json
+++ b/template/package.json
@@ -25,6 +25,7 @@
 		"route-cache": "^0.4.4",
 		"serve-favicon": "^2.4.5",
 		"vue": "^2.5.13",
+		"vue-analytics": "^5.8.0",
 		"vue-router": "^3.0.1",
 		"vue-server-renderer": "^2.5.13",
 		"vuex": "^3.0.1",
@@ -36,6 +37,8 @@
 		"babel-loader": "^7.1.2",
 		"babel-plugin-syntax-dynamic-import": "^6.18.0",
 		"babel-preset-env": "^1.6.1",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-stage-2": "^6.24.1",
 		"chokidar": "^2.0.0",
 		"css-loader": "^0.28.9",
 		"file-loader": "^1.1.6",
